# vge

./: Cargo.toml  README.md  flake.nix
crates/vge_app/: Cargo.toml
crates/vge_app/src/: lib.rs
crates/vge_core/: Cargo.toml
crates/vge_core/src/: lib.rs
crates/vge_math/: Cargo.toml
crates/vge_math/src/: lib.rs
crates/vge_render/: Cargo.toml
crates/vge_render/src/: lib.rs  mesh.rs  primitives.rs
crates/vge_window/: Cargo.toml
crates/vge_window/src/: lib.rs
examples/: simple.rs
src/: app.rs  lib.rs  window.rs
src/app/: event.rs
src/renderer/: mod.rs
