[workspace]
members = ["crates/*"]

[package]
name = "vge"
version = "0.1.0"
edition = "2024"

[dependencies]
vge_window = { path = "crates/vge_window" }
vge_core = { path = "crates/vge_core" }
vge_app = { path = "crates/vge_app" }
vge_render = { path = "crates/vge_render" }
vge_math = { path = "crates/vge_math" }

[dev-dependencies]
smol = "2.0.2"
tracing-subscriber = "0.3.19"
