[workspace]
members = ["crates/*"]

[package]
name = "vge"
version = "0.1.0"
edition = "2024"

[dependencies]
vge_window = { path = "crates/vge_window" }
vge_app = { path = "crates/vge_app" }
vge_render = { path = "crates/vge_render" }
vge_math = { path = "crates/vge_math" }

thiserror = "2.0.9"

[dev-dependencies]
smol = "2.0.2"
tracing-subscriber = "0.3.19"
