[package]
name = "vge_render"
version = "0.1.0"
edition = "2024"

[dependencies]
vge_math = { path = "../vge_math" }
bytemuck = { version = "1.21.0", features = ["derive"] }
smol = "2.0.2"
thiserror = "2.0.9"
wgpu = "23.0.1"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]
